# lil_jit

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml  lil_jit.sh
.devcontainer/: Dockerfile  devcontainer.json
examples/: 99bottels.lil  add.lil  cool.lil  factorial.lil  fib.lil  fib.txt  hello_world.lil  helloworld.lil  mandelbrot.lil  minimal.lil  problem_code.lil  recursion.txt
src/: ast.rs  built_in.rs  checker.rs  chekcer.rs  error.rs  jit.rs  lib.rs  location.rs  logger.rs  main.rs  parser.rs  settings.rs  visitor.rs
src/jit/: arch_def.rs  codegendata.rs  codeinfo.rs  compiler.rs  funcinfo.rs  jitdata.rs  lir.rs  reg_alloc.rs  scope.rs  stub.rs  stub_ref_store.rs
src/jit/arch_def/: arm64.rs
src/jit/lir/: compiler.rs  helper.rs  optimize.rs
src/jit/reg_alloc/: live_interval.rs  reg_def.rs  reg_mapping.rs  reg_off.rs  reg_repo.rs
tests/: mod.rs  pass.rs
tests/pass/: assignment.rs  binary_ops.rs  builtin_calls.rs  for_loop.rs  function.rs  if_else.rs  minimal.rs
