[package]
name = "lil_jit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
nom_locate = "4.2.0"
armoured_rust = { git = "https://github.com/Jozott00/ARMoured_rust", branch = "main"}
libc = "0.2.148"
log = "0.4.20"
clap = { version = "4.4.4", features = ["derive"] }
lazy_static = "1.4.0"
bad64 = "0.6.0"
simple_logger = "4.2.0"
